// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActorAvatar render() should show a gravatar when actor type is a team 1`] = `
<ActorAvatar
  actor={
    Object {
      "id": "3",
      "name": "COOL TEAM",
      "type": "team",
    }
  }
  hasTooltip={true}
>
  <TeamAvatar
    hasTooltip={true}
    team={
      Object {
        "id": "3",
        "name": "COOL TEAM",
        "projects": Array [
          Object {
            "slug": 2,
          },
        ],
        "slug": "cool-team",
      }
    }
  >
    <BaseAvatar
      hasTooltip={true}
      letterId="cool-team"
      round={false}
      style={Object {}}
      title="cool team"
      tooltip="#cool team"
      type="letter_avatar"
      uploadPath="team-avatar"
    >
      <Tooltip
        containerDisplayMode="inline-block"
        disabled={false}
        position="top"
        title="#cool team"
      >
        <Manager>
          <Reference>
            <InnerReference
              setReferenceNode={[Function]}
            >
              <Container
                aria-describedby="tooltip-123456"
                containerDisplayMode="inline-block"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  aria-describedby="tooltip-123456"
                  className="css-1y4rfpo-Container eowlwvy0"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <StyledBaseAvatar
                    className="avatar"
                    letterId="cool-team"
                    loaded={true}
                    round={false}
                    style={Object {}}
                    title="cool team"
                    type="letter_avatar"
                    uploadPath="team-avatar"
                  >
                    <span
                      className="avatar css-wr6j9i-StyledBaseAvatar e147uwb0"
                      style={Object {}}
                      title="cool team"
                      type="letter_avatar"
                    >
                      <ForwardRef
                        displayName="cool team"
                        identifier="cool-team"
                        round={false}
                      >
                        <LetterAvatar
                          displayName="cool team"
                          forwardedRef={null}
                          identifier="cool-team"
                          round={false}
                        >
                          <Component
                            className="css-1ei2ksv-LetterAvatar e12lgfev0"
                            displayName="cool team"
                            forwardedRef={null}
                            identifier="cool-team"
                            round={false}
                          >
                            <svg
                              className="css-1ei2ksv-LetterAvatar e12lgfev0"
                              viewBox="0 0 120 120"
                            >
                              <rect
                                fill="#4e3fb4"
                                height="120"
                                rx="15"
                                ry="15"
                                width="120"
                                x="0"
                                y="0"
                              />
                              <text
                                fill="#FFFFFF"
                                fontSize="65"
                                style={
                                  Object {
                                    "dominantBaseline": "central",
                                  }
                                }
                                textAnchor="middle"
                                x="50%"
                                y="50%"
                              >
                                CT
                              </text>
                            </svg>
                          </Component>
                        </LetterAvatar>
                      </ForwardRef>
                    </span>
                  </StyledBaseAvatar>
                </span>
              </Container>
            </InnerReference>
          </Reference>
        </Manager>
      </Tooltip>
    </BaseAvatar>
  </TeamAvatar>
</ActorAvatar>
`;

exports[`ActorAvatar render() should show a gravatar when actor type is a user 1`] = `
<ActorAvatar
  actor={
    Object {
      "id": "1",
      "name": "Jane Bloggs",
      "type": "user",
    }
  }
  hasTooltip={true}
>
  <UserAvatar
    gravatar={false}
    hasTooltip={true}
    user={
      Object {
        "email": "janebloggs@example.com",
        "id": "1",
        "name": "JanActore Bloggs",
      }
    }
  >
    <BaseAvatar
      gravatarId="janebloggs@example.com"
      hasTooltip={true}
      letterId="janebloggs@example.com"
      round={true}
      style={Object {}}
      title="JanActore Bloggs"
      tooltip="JanActore Bloggs (janebloggs@example.com)"
      type="letter_avatar"
      uploadId=""
      uploadPath="avatar"
    >
      <Tooltip
        containerDisplayMode="inline-block"
        disabled={false}
        position="top"
        title="JanActore Bloggs (janebloggs@example.com)"
      >
        <Manager>
          <Reference>
            <InnerReference
              setReferenceNode={[Function]}
            >
              <Container
                aria-describedby="tooltip-123456"
                containerDisplayMode="inline-block"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  aria-describedby="tooltip-123456"
                  className="css-1y4rfpo-Container eowlwvy0"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <StyledBaseAvatar
                    className="avatar"
                    gravatarId="janebloggs@example.com"
                    letterId="janebloggs@example.com"
                    loaded={true}
                    round={true}
                    style={Object {}}
                    title="JanActore Bloggs"
                    type="letter_avatar"
                    uploadId=""
                    uploadPath="avatar"
                  >
                    <span
                      className="avatar css-1mqfg1n-StyledBaseAvatar e147uwb0"
                      style={Object {}}
                      title="JanActore Bloggs"
                      type="letter_avatar"
                    >
                      <ForwardRef
                        displayName="JanActore Bloggs"
                        identifier="janebloggs@example.com"
                        round={true}
                      >
                        <LetterAvatar
                          displayName="JanActore Bloggs"
                          forwardedRef={null}
                          identifier="janebloggs@example.com"
                          round={true}
                        >
                          <Component
                            className="css-1oxr9oh-LetterAvatar e12lgfev0"
                            displayName="JanActore Bloggs"
                            forwardedRef={null}
                            identifier="janebloggs@example.com"
                            round={true}
                          >
                            <svg
                              className="css-1oxr9oh-LetterAvatar e12lgfev0"
                              viewBox="0 0 120 120"
                            >
                              <rect
                                fill="#4e3fb4"
                                height="120"
                                rx="15"
                                ry="15"
                                width="120"
                                x="0"
                                y="0"
                              />
                              <text
                                fill="#FFFFFF"
                                fontSize="65"
                                style={
                                  Object {
                                    "dominantBaseline": "central",
                                  }
                                }
                                textAnchor="middle"
                                x="50%"
                                y="50%"
                              >
                                JB
                              </text>
                            </svg>
                          </Component>
                        </LetterAvatar>
                      </ForwardRef>
                    </span>
                  </StyledBaseAvatar>
                </span>
              </Container>
            </InnerReference>
          </Reference>
        </Manager>
      </Tooltip>
    </BaseAvatar>
  </UserAvatar>
</ActorAvatar>
`;
